styles/components/_buttons.scss
.ctrl {
  height: 35px;
  padding: 0 24px;
  border-radius: $corner;
  border-width: 1px;
  border-style: solid;
  font-size: $tx5;
  font-weight: 400;
  box-sizing: border-box;
  display: inline-flex;
  vertical-align: middle;
  align-items: center; // centers icons if they are a child element
  justify-content: center;
}

.btn {
  @extend .ctrl;
  cursor: pointer;
  font-weight: 700;

  &:hover {
    text-decoration: none;
    cursor: pointer;
    border-color: $focusedBorder;
  }

  &:focus {
    text-decoration: none;
    outline: 0;
    border-color: $focusedBorder;
  }

  .bar & {
    line-height: $bar;
    height: $bar;
    border: none;
  }

  .barSm & {
    line-height: $barSm;
    height: $barSm;
    border: none;
  }

  .barLg & {
    line-height: $barLg;
    height: $barLg;
    border: none;
  }

  &.processing {
    @include processingOverlay;
  }
}

.btnRadio {
  @extend .btn;
  border: 0;
  padding: 0 6px;
  font-weight: normal;
  height: auto;

  input[type="radio"] {
    display: none;

    & + label {

      &:hover {
        cursor: inherit;
      }

      &:before {
        content: '';
        display: inline-block;
        box-sizing: border-box;
        width: 1em;
        height: 1em;
        border-radius: 50%;
        border-width: 1px;
        border-style: solid;
        vertical-align: middle;
        position: relative;
        top: -0.1em;
        margin-right: 0.4em;
        margin-left: -0.25em;
        //background color is assigned by the theme

        &:hover {
          cursor: inherit;
        }
      }
    }

    //checked state is set by the theme
  }

  input[type="checkbox"] {
    // todo: style this to match the designs
  }

  &:hover {
    border: 0;
  }
}

.btnTxt {
  @extend .btn;
  border: none;
}

.iconBtn {
  //this button has only an icon in it
  @extend .btn;
  font-size: 2rem;
  padding: 0 12px;
}

.iconBtnSm {
  //this button has only an icon in it
  @extend .btn;
  font-size: $tx5;
  padding: 0;
  margin: 0;
  width: 30px;
  height: 30px;
  transition: all 0.15s ease;
}

.btnThin {
  padding: 0 12px;
}

.btnStrip {
  //creates a set of buttons with no gaps between them
  & > .btn {
    border-radius: 0;
    float: left; //float left will collapse the button and position it correctly
  }
  & > .btn:not(:hover) {  // on hover use the normal border width
    border-right-width: 0;
  }
  & > .btn:first-child {
    border-top-left-radius: $corner;
    border-bottom-left-radius: $corner;
  }
  & > .btn:last-child {
    border-top-right-radius: $corner;
    border-bottom-right-radius: $corner;
    border-right-width: 1px;
  }
}

.btnStrip .btnRadio {
  margin-right: 7px;

  &:last-child {
    margin-right: 0;
  }
}

*[class *= "ion-"]:before {
  pointer-events: none; // don't fire clicks on icons
  line-height: 1em;
}

.foldDown {
  //a hidden element that folds down when a parent or sibling is interacted with
  //this element will need a width applied in most cases
  position: absolute;
  top: 100%;
  right: 0;
  -webkit-clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
  transition: 0.2s ease;
  overflow: hidden;

  &.open {
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
  }
}

.searchWrapper {
  //div around a search input
  position: relative;
  width: 100%;

  input {
    text-indent: 1.5em; /* make room for icon */
  }

  &:before {
    //insert a search icon before the text
    font-family: Ionicons;
    content: "\f4a5";
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 1.75em;
    left: 0.6em;
    color: inherit;
  }
}

.cornerTR {
  //positions an element in the top right. It should usually be an icon button.
  position: absolute;
  z-index: 1; // don't unintentionally cover with other absolute elements
  top: 10px;
  right: $pad;
  font-size: $tx1;
  cursor: pointer;
}

// range slider

input[type=range]{
  -webkit-appearance: none;
  height: 22px;
  width: 100%;

  &:disabled {
    @include disabled;
  }
}

input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 6px;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-radius: 4px;
  background: #ccc; //default, use color classes
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 22px;
  width: 22px;
  border-style: solid;
  border-width: 1px;
  border-radius: 50%;
  margin-top: -9px;
}

input[type=range]:focus {
  outline: none;
}

